...
                            systemName: userViewModel.user != nil ?
                                Constants.Text.IconNames.togglePower :
                                Constants.Text.IconNames.person
                        )
                        .foregroundColor(Color(Constants.Colors.primaryText))
                    }
                    .accessibilityIdentifier("Person")
                }
            }
        }
        .fullScreenCover(isPresented: $isLoginScreenOpen) {
            AuthScreen(isPresented: $isLoginScreenOpen)
        }
...
